@@ -1,4 +1,4 @@
-Phoronix Test Suite 5.4.0m1
+Phoronix Test Suite 5.4.0m2
 http://www.phoronix-test-suite.com/
 #####################################
 
