@@ -405,7 +405,7 @@ th
 	background: #DFDFDF;
 	font-weight: bold;
 	padding: 0 4px;
-	text-align: center;
+	text-align: left;
 }
 td
 {
